fixed bem in header and added gaps in html

--- a/src/styles/blocks/header.scss
+++ b/src/styles/blocks/header.scss
@@ -19,6 +19,10 @@
     }
   }
 
+  &__top {
+    @include top-actions;
+  }
+
   &__title {
     text-align: center;
     font-weight: 700;
@@ -37,39 +41,6 @@
       font-size: 80px;
       line-height: 80px;
       color: #1d1d1d;
-    }
-  }
-
-  &__call {
-    margin-right: 30px;
-    text-decoration: none;
-
-    @include onDesktop {
-      margin-right: 40px;
-
-      &::before {
-        content: "+1 234 555-55-55";
-        position: relative;
-        top: 50%;
-        transform: translate(-100%, -50%);
-        display: block;
-        width: max-content;
-        padding-right: 12px;
-
-        font-weight: 700;
-        font-size: 12px;
-        line-height: 16px;
-        letter-spacing: 2px;
-        text-transform: uppercase;
-        color: #292929;
-        opacity: 0;
-        pointer-events: none;
-      }
-
-      &:hover::before {
-        opacity: 1;
-        pointer-events: all;
-      }
     }
   }
 
