--- a/src/styles/blocks/icon.scss
+++ b/src/styles/blocks/icon.scss
@@ -1,4 +1,6 @@
 .icon {
+  position: relative;
+
   display: block;
   width: 18px;
   height: 18px;
@@ -8,14 +10,42 @@
     height: 24px;
   }
 
-  @include onDesktop {
-    width: 24px;
-    height: 24px;
-  }
+  text-decoration: none;
 
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
+
+  &__tooltip {
+    display: none;
+
+    @include onDesktop {
+      position: absolute;
+      right: 100%;
+      top: 50%;
+      transform: translateY(-50%);
+
+      display: block;
+      width: max-content;
+      padding-right: 12px;
+
+      font-weight: 700;
+      font-size: 12px;
+      line-height: 16px;
+      letter-spacing: 2px;
+      text-transform: uppercase;
+      color: #292929;
+      opacity: 0;
+      pointer-events: none;
+
+      transition: opacity 0.3s;
+    }
+  }
+
+  &:hover &__tooltip {
+    opacity: 1;
+    pointer-events: all;
+  }
 
   &--menu {
     background-image: url(../images/menu.svg);
@@ -27,6 +57,12 @@
   }
 
   &--phone {
+    margin-right: 30px;
+
+    @include onTablet {
+      margin-right: 40px;
+    }
+
     background-image: url(../images/phone.svg);
   }
 
